--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,8 @@
             "src": "/(.*)",
             "dest": "/"
         }
-    ]
+    ],
+    "headers": [
+        { "for": "*", "key": "Access-Control-Allow-Origin", "value": "https://ankit-hotel.vercel.app/" } 
+      ]
   }
