--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,14 @@
             "dest": "/"
         }
     ],
-    "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "https://ankit-hotel.vercel.app/" } 
-      ]
+    "headers" : [
+    {
+        "source": "/api/(.*)",
+        "headers": [
+            { "key": "Access-Control-Allow-Origin", "value": "https://ankit-hotel.vercel.app/" } 
+        
+        ]
+      }
+    ]
+        
   }
