--- a/vercel.json
+++ b/vercel.json
@@ -8,18 +8,12 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/"
+          "src": "/(.*)",
+          "dest": "./index.js",
+          "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+          "headers": {
+            "Access-Control-Allow-Origin": "*"
+          }
         }
-    ],
-    "headers" : [
-    {
-        "source": "/api/(.*)",
-        "headers": [
-            { "key": "Access-Control-Allow-Origin", "value": "https://ankit-hotel.vercel.app/" } 
-        
-        ]
-      }
-    ]
-        
+      ]
   }
