--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,10 @@
             "use": "@vercel/node"
         }
     ],
-   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "./",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
-      "headers": {
-        "Access-Control-Allow-Origin": "*"
-      }
-    }
-  ]
-  }
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+    ]
+}
